[FIX] Align download btn with language

--- a/src/modules/download/components/Download/styles.module.scss
+++ b/src/modules/download/components/Download/styles.module.scss
@@ -1,7 +1,7 @@
 .downloadButton {
   position: absolute;
   max-width: 25vw;
-  right: 15px;
+  right: 30px;
   bottom: 10vh;
   background: var(--color-white);
   border-radius: 8px;
